# deepmind-robotics

./: .gitignore  README.md  bird.glb  drone.glb
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css
frontend/app/api/assets/: route.ts
frontend/app/api/assets/[id]/: route.ts
frontend/app/api/assets/save/: route.ts
frontend/app/api/chat/: route.ts
frontend/app/api/meshy/: route.ts
frontend/app/create-asset/: page.tsx
frontend/app/splat/: page.tsx
frontend/components/: GLBViewer.tsx
frontend/lib/: assets.ts  r2.ts
mujoco_rl/: convert_trajectories.py  living_room_env.py  pd_controller.py  pyproject.toml  train.py  train_live.py  visualize.py
mujoco_rl/checkpoints/: bc_weights.pt
mujoco_rl/livingroom_rl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mujoco_rl/trajectories/: sample.json
plans/: AGENT_1_ENVIRONMENT_BUILDER.md  AGENT_2_TRAINING_PIPELINE.md
server/: API_ENDPOINTS.md  button_page.html  database.py  example_client.html  example_client_1.html  main.py  models.py  requirements.txt  run.sh  ws_manager.py
server/tool_calls/: depth.py  gemini_path.py  lyra.py  mcp.py  path_detection.py  three_js.py
splat/: gsplat-viewer.html  server.js  viewer.html
splat/fvdb/: __init__.py  worker.py
splat/lyra/: __init__.py  worker.py
